More docs on drupal and JS

--- a/entries/application/drupal.twig
+++ b/entries/application/drupal.twig
@@ -4,11 +4,26 @@
             <h1>UpCloo Drupal Plugin</h1>
             <p class="lead">
                 Drupal plugin allows a complete integration with
-                UpCloo services. 
+                UpCloo services.
             </p>
         </div>
         <div class="span12">
-            <p class="lead">Coming Soon</p>
+            <p>You can easily integrate UpCloo in your Drupal applications (v.7, v.6)</p>
+            <p>
+            You have to create a new block and apply the javascript snippet to your content.
+            Go to your reserved area at <a href="http://www.upcloo.com/">UpCloo.com </a> and
+            copy your personal JS code.
+            </p>
+            <p>After that go to your administration area into Drupal.</p>
+            <p class="span9 offset3"><strong>Home &gt;&gt; Administration &gt;&gt; Structure &gt;&gt; Blocks</strong></p>
+            <p>Create new block, place a name, description and paste the JS code (copied before)
+            into the "Block body" textarea.<br/>
+            Remember to use the "Full HTML" format</p>
+            <p>In your "Visibility Settings" remember to show the block only in pages that you
+            want to correlate, for example "Article" type only.</p>
+            <p>Now save your block.</p>
+            <h2>A real example:</h2>
+            <img src="/media/img/application/drupal-block.png" alt="drupal-block-upcloo" title="Drupal Block Example"/>
         </div>
     </div>
 </div>
