--- a/entries/application/wordpress.twig
+++ b/entries/application/wordpress.twig
@@ -33,48 +33,17 @@ providers:
         <div class="row">
             <div class="span12">
                 <h2>Install UpCloo Plugin</h2>
-                <p>Download the plugin using dedicated links <a href="#download">here</a>.</p>
+                <p>
+                UpCloo is in the official WordPress repository. In order to use it you have just
+                to search "UpCloo" in the plugin central and install it. After that:
+                </p>
                 <ul>
-                    <li>Upload the wp-upcloo folder into your WordPress plugin folder.</li>
                     <li>Activate UpCloo plugin through Plugin Web Interface</li>
                     <li>That's all it is.</li>
                 </ul>
                 <h3>Configure the plugin</h3>
                 <p>
                     UpCloo create a new menu tree. Use that menu for handling your personal settings.
-                </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="span12">
-                <h1>Working on UpCloo WordPress Plugin</h1>
-            </div>
-            <div class="span6">
-                <p>
-                    <a href="/application/wordpress/template-results.html" class="big-text">Template Results</a>
-                    Using CSS techniques.
-                </p>
-                <p>
-                    <a href="/application/wordpress/rewrite-template.html" class="big-text">Template Results Rewrite</a>
-                    Using a completely personalized template.
-                </p>
-                <p>
-                    <a href="/application/wordpress/template-widget.html" class="big-text">Template Widget Results</a>
-                    Using a completely personalized template for widgets.
-                </p>
-                <p>
-                    <a href="/application/wordpress/template-search.html" clasS="big-text">Template Search Results</a>
-                    Using a completely personalized template for search service.
-                </p>
-            </div>
-            <div class="span6">
-                <p>
-                    <a href="/application/wordpress/remote-importer.html" class="big-text">Enable Remote Importer</a>
-                    Activate the remote importer for enable the UpCloo crawler.
-                </p>
-                <p>
-                    <a href="/application/wordpress/search.html" class="big-text">UpCloo Search</a>
-                    Activate UpCloo Search service.
                 </p>
             </div>
         </div>
