--- a/entries/documentation.twig
+++ b/entries/documentation.twig
@@ -10,15 +10,13 @@
             </p>
             <ul>
                 <li><a href="/documentation/correlations.html">Correlation</a></li>
-                <li><a href="/documentation/searches.html">Searches</a></li>
-                <li><a href="/documentation/autocomplete.html">Autocomplete</a></li>
             </ul>
             <p>
                 All UpCloo SDKs and plugins are released under <a href="/mit-license.html">MIT license</a> where not
                 otherwise specified.
             </p>
             <p>
-                If you are interested on perfomances of UpCloo over the network: 
+                If you are interested on perfomances of UpCloo over the network:
                 <a href="/documentation/performance.html">see here</a>
             </p>
         </div>
@@ -32,22 +30,8 @@
         </div>
         <div class="span6">
             <p>
-                <a href="/documentation/getting-started/correlation.html" class="big-text">Getting Started with Correlation</a>
+                <a href="/documentation/getting-started/correlation.html" class="big-text">Advanced features</a>
                 The tipical flow that you have to follow to add the correlation
-                service to your business.
-            </p>
-        </div>
-        <div class="span6">
-            <p>
-                <a href="/documentation/getting-started/search.html" class="big-text">Getting Started with Search</a>
-                The tipical flow that you have to follow to add the search service
-                to your business.
-            </p>
-        </div>
-        <div class="span6">
-            <p>
-                <a href="/documentation/getting-started/autocomplete.html" class="big-text">Getting Started with Autocomplete</a>
-                The tipical flow that you have to follow to add the autocomplete
                 service to your business.
             </p>
         </div>
@@ -78,8 +62,8 @@
         </div>
         <div class="span6">
             <p>
-                UpCloo uses a NOSQL database. Our database is strongly-typed and you 
-                have to use a correct field type for all your injections. 
+                UpCloo uses a NOSQL database. Our database is strongly-typed and you
+                have to use a correct field type for all your injections.
             </p>
             <ul>
                 <li><a href="/documentation/types/string.html">string</a></li>
