--- a/entries/index.twig
+++ b/entries/index.twig
@@ -31,7 +31,7 @@ providers:
                     All UpCloo plugins and tools for
                     your business are released as Open-source projects for
                     give to you the ability to evaluate us. See all projects
-                    on <a href="https://github.com/upcloupclooo">Github</a>.
+                    on <a href="https://github.com/upcloo">Github</a>.
                 </p>
             </div>
             <div class="span6">
