--- a/entries/sdk/js.twig
+++ b/entries/sdk/js.twig
@@ -33,66 +33,52 @@ providers:
 		<div class="span12">
 			<h2>Getting Started</h2>
 			<p>
-			The Upcloo Javascript SDK allows you to simply and quickly embed the Upcloo correlation engine to your website 
+			The Upcloo Javascript SDK allows you to simply and quickly embed the Upcloo correlation engine to your website
 			and display relevant links for your contents.
 			</p>
 		</div>
 		<div class="span12">
 		 	<h3>Embed the snippet</h3>
 			<p>
-			First of all you have to embed the Javascript code snippet into the website's content pages were you want it 
-			to show upCloo's related links.	  
+			First of all you have to embed the Javascript code snippet into the website's content pages were you want it
+			to show upCloo's related links.
 			</p>
 			<pre class="prettyprint linenums">
-(function(g,opts) {
-    g.upCloo = g.upCloo || {};
-    g.upCloo.bootStrap = opts;
-    var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;
-    s.src = '//cdn.repository.upcloo.com/a/u.js'
-    var n = document.getElementsByTagName('script')[0];
-    n.parentNode.insertBefore(s,n);
-})(this,{
-    "pageId": "http://demowebsite.com/2012/07/29/some-nice-content-permalink/",
-    "siteKey": "xx00XXxxx"
-});</pre>
+&lt;div class='upcloo-widget' id="upcloo_1000"&gt;&lt;/div&gt;
+&lt;script type="text/javascript"&gt;
+(function(g,d,id){
+  upCloo = g.upCloo || [];
+  upCloo.push(
+    {
+        "permalink" : "http://your-domain.tld/your-permalink/a-page.html",
+        "siteKey" : "your-sitekey"
+    }
+  );
+  var s = d.createElement('script') , n = d.getElementsByTagName('script')[0];
+  s.type = 'text/javascript';
+  s.async = true;s.id = id;
+  s.src = '//r.upcloo.com/a/a.js';
+  !d.getElementById(id) ? n.parentNode.insertBefore(s,n) :false;
+})(this,document,'upcloo_js_sdk')
+&lt;/script&gt;
+</pre>
 		<p>
 		<em>Please note that the upcloo Js Snippet is loaded in an asyncronous way , so it will be downloaded in parallel with the other site's assets,
 			this is done to minimize the snippet's impact on the site loading performance and prevents blocking the rendering of the page during down-time.
 		</em>
 		<p>
-			The snippet can be placed anywere inside the <code><head></code> or the <code><body></code> of the web page, however we recommend including it 
-			at the bottom of the page , just before the <code></body></code> tag. 
+			The snippet can be placed anywere inside the <code><head></code> or the <code><body></code> of the web page, however we recommend including it
+			at the bottom of the page , just before the <code></body></code> tag.
 		</p>
 		</p>
 		<h3>Setting up required options</h3>
         	<p>
-        		Those are the only two mandatory options that you must specify to enable upCloo for your website: 
+        		Those are the only two mandatory options that you must specify to enable upCloo for your website:
         	<br>
-        	<code>pageId</code> The permalink of the current page , should be unique to a specific content page.      
+        	<code>permalink</code> The permalink of the current page , should be unique to a specific content page.
        		<br>
-        	<code>siteKey</code> The upCloo website siteKey , this is the siteKey for your website that you will 
+        	<code>siteKey</code> The upCloo website siteKey , this is the siteKey for your website that you will
         	get form upCloo upon registration.
        		</p>
-       	<h3>Advanced configuration options</h3>
-        	<p>
-        		The UpCloo Js SDK has a number of options that you can use to easely customize it : 
-        	<br>
-        	<code>customCss</code> Set this to true if you want to ovverride the upCloo widget CSS classes to suit your website.
-       		<br>
-        	<code>sendBeacon</code> Enabled by default if a content page not yet indexed gets visited , the js SDK will send an indexing request to UpCloo backend 
-        	
-        	</p>
-        <h3>Custom Widget Headline</h3>
-         <pre class="prettyprint linenums">
-"widget":{
-      "opts":{
-          "headline":"maybe you're interested in "
-       }
-    }
-}
-         </pre>
-          You can set a custom headline for the upCloo suggest widget by setting the <code>headline</code> options inside the widget config object.  
-         </p>
-	</div>
 	</div>
 </div>
