--- a/entries/sdk/js.twig
+++ b/entries/sdk/js.twig
@@ -30,11 +30,15 @@ providers:
         </div>
 	</section>
 	<div class="row">
+        <h1 class="span12">Getting Started</h1>
+        <div class="span6">
+            <h2 class="lead"><a href="/sdk/js/how-it-works.html">How it Works</a></h2>
+        </div>
 		<div class="span12">
-			<h2>Getting Started</h2>
+			<h2>In few words</h2>
 			<p>
-			The Upcloo Javascript SDK allows you to simply and quickly embed the Upcloo correlation engine to your website
-			and display relevant links for your contents.
+            <span class="label label-info">Heads up! </span> The Upcloo Javascript SDK allows you to simply
+            and quickly embed the Upcloo correlation engine to your website and display relevant links for your contents.
 			</p>
 		</div>
 		<div class="span12">
