--- a/layouts/default.twig
+++ b/layouts/default.twig
@@ -3,20 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>UpCloo Developers</title>
-        <meta name="description" content="UpCloo Developers">
-        <meta name="author" content="Corley S.r.l.">
+        <meta name="description" content="UpCloo Developers"/>
+        <meta name="author" content="Corley S.r.l."/>
 
         <!-- styles -->
-        <link rel="stylesheet" href="/styles/bootstrap.min.css"">
+        <link rel="stylesheet" href="/styles/bootstrap.min.css" />
         <style type="text/css">
           body {
             padding-top: 60px;
             padding-bottom: 40px;
           }
         </style>
-        <link href="/styles/bootstrap-responsive.mincss" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="/styles/default.css">
-        <link rel="stylesheet" type="text/css" href="/styles/prettify.css">
+        <link href="/styles/bootstrap-responsive.min.css" rel="stylesheet" />
+        <link rel="stylesheet" type="text/css" href="/styles/default.css" />
+        <link rel="stylesheet" type="text/css" href="/styles/prettify.css" />
 
     </head>
     <body>
