--- a/entries/sdk/php/git-source.twig
+++ b/entries/sdk/php/git-source.twig
@@ -4,10 +4,10 @@
             <h1>Load UpCloo PHP SDK using GIT repository</h1>
             <p>
                 UpCloo PHP SDK is developer with GIT support. The platform that
-                hosts all Corley open-source project is <a target="_blank" href="https://github.com">Github</a>.
+                hosts all UpCloo open-source project is <a target="_blank" href="https://github.com">Github</a>.
             </p>
             <p>
-                UpCloo PHP SDK repository is located <a target="_blank" href="https://github.com/corley/upcloo-php-sdk">here</a>.
+                UpCloo PHP SDK repository is located <a target="_blank" href="https://github.com/upcloo/upcloo-php-sdk">here</a>.
             </p>
             <h2>Clone the GIT repository</h2>
             <p>
@@ -15,7 +15,7 @@
                 using the main repository.
             </p>
             <pre>
-git clone git@github.com:corley/upcloo-php-sdk.git</pre>
+git clone git://github.com/upcloo/upcloo-php-sdk.git</pre>
             <p>
                 Now you have the latest UpCloo PHP SDK library.
             </p>
@@ -25,7 +25,7 @@ git clone git@github.com:corley/upcloo-php-sdk.git</pre>
             </p>
             <pre>
 git pull origin master</pre>
-            <blockquote>    
+            <blockquote>
                 Remember that the library has a particular structure. See it <a href="/sdk/php/structure.html">here</a>.
             </blockquote>
         </div>
