--- a/entries/sdk/php/phar.twig
+++ b/entries/sdk/php/phar.twig
@@ -10,16 +10,16 @@
             </p>
             <h2>Usage</h2>
             <p>
-                First of all download the latest PHAR archive from the download section. 
+                First of all download the latest PHAR archive from the download section.
                 After that you can use directly into your softwares.
             </p>
             <pre class="prettyprint linenums">
 require_once 'upcloo-sdk.phar';
 
 $manager = UpCloo_Manager::getInstance();
-$manager->setCredential("username", "sitekey", "password");</pre>
+$manager->setCredential("your-sitekey");</pre>
             <p>
-                The PHAR archive start the library autoloader. 
+                The PHAR archive start the library autoloader.
                 You have only to use it for create new contents and get results.
             </p>
         </div>
