examples of caching

--- a/entries/documentation.twig
+++ b/entries/documentation.twig
@@ -35,82 +35,17 @@
                 service to your business.
             </p>
         </div>
-    </div>
-    <div class="row">
-        <div class="span6">
-            <h3>UpCloo Operations</h3>
-        </div>
-        <div class="span6">
-            <h3 id="types">UpCloo Types Definition</h3>
-        </div>
         <div class="span6">
             <p>
-                UpCloo is designed around an index. You can
-                interact with this index using the dedicated <a href="/documentation/xml-rest-service.html">XML REST service</a>.
+                <a href="/documentation/getting-started/correlation.html" class="big-text">Best Practices</a>
+                Check out a list of useful best practices when you integrate
+                UpCloo in your web pages:
             </p>
             <ul>
-                <li><a href="/documentation/rest/get.html">Retrive (GET)</a></li>
-                <li><a href="/documentation/rest/index.html">Insert (INDEX)</a></li>
-                <li><a href="/documentation/rest/index.html">Update (INDEX)</a></li>
-                <li><a href="/documentation/rest/delete.html">Invalidation (DELETE)</a></li>
-            </li>
-            </ul>
-            <p>
-                To simplify your work, you can choose an already available SDK. An SDK wraps the XML REST
-                service for integrating UpCloo quickly into an existing application.
-            </p>
-        </div>
-        <div class="span6">
-            <p>
-                UpCloo uses a NOSQL database. Our database is strongly-typed and you
-                have to use a correct field type for all your injections.
-            </p>
-            <ul>
-                <li><a href="/documentation/types/string.html">string</a></li>
-                <li><a href="/documentation/types/integer.html">Integer</a></li>
-                <li><a href="/documentation/types/decimal.html">Decimal</a></li>
-                <li><a href="/documentation/types/dates-times.html">Dates and Times</a></li>
-                <li><a href="/documentation/types/texts.html">Texts</a></li>
-            </ul>
-            <p>
-                UpCloo types follow tipical high-level programming language variables types.
-            </p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="span6">
-            <h3 id="fields">UpCloo Fields Definition</h3>
-        </div>
-        <div class="span6">
-            <h3>UpCloo Dynamic Fields</h3>
-        </div>
-        <div class="span6">
-            <p>
-                Understanding how UpCloo treats your fields.
-            </p>
-            <ul>
-                <li><a href="/documentation/fields/id.html">id</a></li>
-                <li><a href="/documentation/fields/title.html">title</a></li>
-                <li><a href="/documentation/fields/publish-date.html">publish date</a></li>
-                <li><a href="/documentation/fields/summary.html">summary</a></li>
-                <li><a href="/documentation/fields/content.html">content</a></li>
-                <li><a href="/documentation/fields/image.html">image</a></li>
-                <li><a href="/documentation/fields/url.html">url</a></li>
-                <li><a href="/documentation/fields/type.html">type</a></li>
-                <li>authors</li>
-                <li>tags</li>
-                <li>categories</li>
+                <li><a href="/documentation/best-practice/simple-proxy.html">
+                    Add cache layer on server side-integration</a></li>
             </ul>
         </div>
-        <div class="span6">
-            <p>UpCloo dynamic fields to get more power</p>
-            <ul>
-                <li>tag</li>
-                <li>text</li>
-                <li>date</li>
-                <li>int</li>
-                <li>decimal</li>
-            </ul>
-        </div>
+
     </div>
 </div>
